@@ -1,3 +1,7 @@
+Wed Feb 19 17:47:01 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ipsocket.c (ip_s_getaddress): Don't access freed memory.
+
 Wed Feb 19 11:39:41 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* configure.in: it must see rb_cv_broken_memmem not rb_cv_func_memmem.
